src/app/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
    @apply m-0 p-0 w-full h-full overflow-hidden;
}

/* Text size */
.header1 {
    @apply text-4xl sm:text-7xl font-bold relative z-20 bg-clip-text text-transparent bg-gradient-to-b from-neutral-200 to-neutral-500 py-8 text-center;
}

.header2 {
    @apply text-2xl sm:text-4xl font-bold text-neutral-600 dark:text-white;
}

.header2-gradient {
    @apply text-2xl sm:text-4xl font-semibold relative z-20 bg-clip-text text-transparent bg-gradient-to-b from-neutral-200 to-neutral-500;
}

.bento-title {
    @apply text-2xl sm:text-4xl font-bold tracking-tight text-neutral-900 dark:text-white;
}

.header3 {
    @apply text-xl font-bold text-neutral-600 dark:text-white;
}

.header4 {
    @apply text-sm font-medium dark:text-white;
}

.secondary {
    @apply mx-auto font-normal text-neutral-600 dark:text-neutral-400;
}

.paragraph {
    @apply text-neutral-500 text-sm max-w-sm mt-2 dark:text-neutral-300;
}

.break {
    @apply border-t-2 border-gray-500;
}

/* Images */
.classicImage {
    @apply w-full object-cover rounded-xl;
}

/* Card colour */
.card-bg {
    background-color: #282828b3;
}

/* Button styles */
@media (max-width: 1024px) {
    .lg\:paused-spinner {
        animation: spin 2s linear infinite !important;
        animation-play-state: running !important;
    }
}

@keyframes spin {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

/* Scroll bar */
.hide-scrollbar {
    scrollbar-width: none; /* Firefox */
    -ms-overflow-style: none; /* Internet Explorer 10+ */
}

.hide-scrollbar::-webkit-scrollbar {
    /* WebKit browsers */
    width: 0;
    height: 0;
    display: none;
    background: transparent;
}

/* safari being broken */
.custom-backdrop-blur-40px {
    -webkit-backdrop-filter: blur(40px);
    backdrop-filter: blur(40px);
}

.custom-backdrop-blur-10px {
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
}

